--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <!-- google Fonts End -->
     <!-- bootstrap Beginn -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- bootstrap End -->
-    <link rel="stylesheet" href="mainStyle.css">
+    <link rel="stylesheet" href="./styles/mainStyle.css">
 
     <script src="scripts/include.js"></script>
     <title>Document</title>
@@ -26,8 +25,7 @@
         <div class="grid d-flex justify-content-between">
             <div class="row">
                 <!-- sidebar Connection beginn -->
-                <div class="col-2 left-container" style="height: 100vh; background-color: #1E3190;"
-                    w3-include-html="sidebar.html">
+                <div class="col-2 left-container" style="height: 100vh; background-color: #1E3190;" w3-include-html="sidebar.html">
                 </div>
                 <!-- sidebar Connection End -->
 
@@ -39,9 +37,7 @@
                                 <h1>Title</h1>
                                 <p class="title-text">Lorem ipsum dolor sit amet.</p>
                                 <div class="content">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam iste quae nam
-                                        ex, iusto maxime eos alias at amet ducimus eius, placeat itaque. Molestias a
-                                        veritatis aspernatur. Perspiciatis, est magni?</p>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam iste quae nam ex, iusto maxime eos alias at amet ducimus eius, placeat itaque. Molestias a veritatis aspernatur. Perspiciatis, est magni?</p>
                                 </div>
                             </div>
                             <!-- your Code End -->
