rewrite sidebar and style improvements

--- a/sidebar.html
+++ b/sidebar.html
@@ -1,20 +1,18 @@
-<!-- Left Container Beginn -->
-
-<div>
-    <div class="logo-img">
-        <img src="imgs/logo.png" alt="">
+<aside class="col-2 sidebar-container border-spacing">
+    <div class="sidebar-header">
+        <div class="logo-img">
+            <img src="./imgs/logo.png" alt="">
+        </div>
+        <nav class="titles-section">
+            <a href="#">Board</a>
+            <a href="#">Backlog</a>
+            <a href="#">Add Task</a>
+            <a href="#">Help</a>
+        </nav>
     </div>
-    <div class="titles-section">
-        <a href="#">Board</a>
-        <a href="#">Backlog</a>
-        <a href="#">Add Task</a>
-        <a href="#">Help</a>
+    <div class="personal-photo-container">
+        <div class="personal-photo">
+            <img class="rounded-circle" src="imgs/person.jpg" alt="">
+        </div>
     </div>
-</div>
-<div class="personal-photo-container">
-    <div class="personal-photo">
-        <img class="rounded-circle" src="imgs/person.jpg" alt="">
-    </div>
-</div>
-
-<!-- Left Container Beginn -->
+</aside>
