--- a/index.html
+++ b/index.html
@@ -14,38 +14,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- bootstrap End -->
     <link rel="stylesheet" href="./styles/mainStyle.css">
+    <link rel="stylesheet" href="./styles/sidebar.css">
 
-    <script src="scripts/include.js"></script>
-    <title>Document</title>
+    <script src="./scripts/include.js"></script>
+    <title>Join</title>
 </head>
 
-<body onload="includeHTML()">
-    <div class="container-fluid">
-        <!-- Content here -->
-        <div class="grid d-flex justify-content-between">
-            <div class="row">
-                <!-- sidebar Connection beginn -->
-                <div class="col-2 left-container" style="height: 100vh; background-color: #1E3190;" w3-include-html="sidebar.html">
-                </div>
-                <!-- sidebar Connection End -->
+<body onload="init()">
+    <!-- Content here -->
+    <div class="wrapper">
+        <!-- sidebar Connection beginn -->
+        <div w3-include-html="./sidebar.html"></div>
+        <!-- sidebar Connection End -->
 
-                <div class="col-10" style="height: 100vh;">
-                    <div class="right-container">
-                        <div class="contaianer">
-                            <!-- your Code Beginn -->
-                            <div class="width-container">
-                                <h1>Title</h1>
-                                <p class="title-text">Lorem ipsum dolor sit amet.</p>
-                                <div class="content">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam iste quae nam ex, iusto maxime eos alias at amet ducimus eius, placeat itaque. Molestias a veritatis aspernatur. Perspiciatis, est magni?</p>
-                                </div>
-                            </div>
-                            <!-- your Code End -->
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <main class="right-container border-spacing">
+            <h1>Title</h1>
+        </main>
     </div>
 
 </body>
