--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- bootstrap End -->
     <link rel="stylesheet" href="./styles/mainStyle.css">
     <link rel="stylesheet" href="./styles/sidebar.css">
-
+    <script src="./scripts/index.js"></script>
     <script src="./scripts/include.js"></script>
     <title>Join</title>
 </head>
