--- a/backlog.html
+++ b/backlog.html
@@ -1,14 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Fonts Begin -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
+    <!-- Google Fonts End -->
+    <!-- Bootstrap Begin -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Bootstrap End -->
+    <link rel="stylesheet" href="./styles/mainStyle.css">
+    <link rel="stylesheet" href="./styles/backlog.css">
+    <link rel="stylesheet" href="./styles/sidebar.css">
+    <script src="./scripts/mini_backend.js"></script>
+    <script src="./scripts/backlog.js"></script>
+    <script src="./scripts/include.js"></script>
+    <script src="./scripts/mini_backend.js"></script>
     <title>Backlog</title>
-
-    <link rel="stylesheet" href="styles/backlog.css">
 </head>
-<body>
-    <div class="div">xdfghdsfjhgfj</div>
+
+<body onload="init()">
+    <div class="wrapper">
+        <!-- Sidebar Begin -->
+        <div w3-include-html="./sidebar.html"></div>
+        <!-- Sidebar End -->
+
+        <main class="right-container border-spacing">
+            <!-- Unique content START -->
+            <header>
+                <h1>Add Task</h1>
+                <span>Learning Management System Project</span>
+            </header>
+            <div class="backlog-container">
+                <!-- <div class="backlog-headline">
+                    <div>ASSIGNED TO</div>
+                    <div>CATEGORY</div>
+                    <div>DETAILS</div>
+                </div> -->
+                <div id="backlog-content">
+                    <div class="backlog-item color-category-1">
+                        <div class="person">
+                            <img class="rounded-circle profile-picture" src="imgs/pp-samir.jfif" alt="">
+                            <div class="person-name">
+                                <span>Samir Barbat</span>
+                                <a href="mailto:name@domain.com">name@domain.com</a>
+                            </div>
+                        </div>
+                        <div> 
+                            Category 1
+                        </div>
+                        <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In laudantium fugit sed aut
+                            repellat, facere error nesciunt officiis recusandae nobis aperiam rerum unde quaerat magnam
+                            fuga vitae earum, culpa dignissimos?</div>
+                    </div>
+                    <div class="backlog-item color-category-2">
+                        <div class="person">
+                            <img class="rounded-circle profile-picture" src="imgs/pp-samuel.jfif" alt="">
+                            <div class="person-name">
+                                <span>Samuel Bergen</span>
+                                <a href="mailto:name@domain.com">name@domain.com</a>
+                            </div>
+                        </div>
+                        <div>
+                            Category 2
+                        </div>
+                        <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In laudantium fugit sed aut
+                            repellat, facere error nesciunt officiis recusandae nobis aperiam rerum unde quaerat magnam
+                            fuga vitae earum, culpa dignissimos?</div>
+                    </div>
+                    <div class="backlog-item color-category-3">
+                        <div class="person">
+                            <img class="rounded-circle profile-picture" src="imgs/pp-lukas.jfif" alt="">
+                            <div class="person-name">
+                                <span>Lukas Volgger</span>
+                                <a href="mailto:name@domain.com">name@domain.com</a>
+                            </div>
+                        </div>
+                        <div>
+                            Category 3
+                        </div>
+                        <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In laudantium fugit sed aut
+                            repellat, facere error nesciunt officiis recusandae nobis aperiam rerum unde quaerat magnam
+                            fuga vitae earum, culpa dignissimos?</div>
+                    </div>
+
+                </div>
+            </div>
+            <!-- Unique content END -->
+        </main>
+    </div>
 </body>
+
 </html>
