--- a/backlog.html
+++ b/backlog.html
@@ -20,7 +20,6 @@
     <script src="./scripts/mini_backend.js"></script>
     <script src="./scripts/backlog.js"></script>
     <script src="./scripts/include.js"></script>
-    <script src="./scripts/mini_backend.js"></script>
     <title>Backlog</title>
 </head>
 
@@ -42,54 +41,7 @@
                     <div>CATEGORY</div>
                     <div>DETAILS</div>
                 </div> -->
-                <div id="backlog-content">
-                    <div class="backlog-item color-category-1">
-                        <div class="person">
-                            <img class="rounded-circle profile-picture" src="imgs/pp-samir.jfif" alt="">
-                            <div class="person-name">
-                                <span>Samir Barbat</span>
-                                <a href="mailto:name@domain.com">name@domain.com</a>
-                            </div>
-                        </div>
-                        <div> 
-                            Category 1
-                        </div>
-                        <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In laudantium fugit sed aut
-                            repellat, facere error nesciunt officiis recusandae nobis aperiam rerum unde quaerat magnam
-                            fuga vitae earum, culpa dignissimos?</div>
-                    </div>
-                    <div class="backlog-item color-category-2">
-                        <div class="person">
-                            <img class="rounded-circle profile-picture" src="imgs/pp-samuel.jfif" alt="">
-                            <div class="person-name">
-                                <span>Samuel Bergen</span>
-                                <a href="mailto:name@domain.com">name@domain.com</a>
-                            </div>
-                        </div>
-                        <div>
-                            Category 2
-                        </div>
-                        <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In laudantium fugit sed aut
-                            repellat, facere error nesciunt officiis recusandae nobis aperiam rerum unde quaerat magnam
-                            fuga vitae earum, culpa dignissimos?</div>
-                    </div>
-                    <div class="backlog-item color-category-3">
-                        <div class="person">
-                            <img class="rounded-circle profile-picture" src="imgs/pp-lukas.jfif" alt="">
-                            <div class="person-name">
-                                <span>Lukas Volgger</span>
-                                <a href="mailto:name@domain.com">name@domain.com</a>
-                            </div>
-                        </div>
-                        <div>
-                            Category 3
-                        </div>
-                        <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In laudantium fugit sed aut
-                            repellat, facere error nesciunt officiis recusandae nobis aperiam rerum unde quaerat magnam
-                            fuga vitae earum, culpa dignissimos?</div>
-                    </div>
-
-                </div>
+                <div id="backlog-content"></div>
             </div>
             <!-- Unique content END -->
         </main>
