--- a/board.html
+++ b/board.html
@@ -8,7 +8,7 @@
     <!-- Google Fonts Begin -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap" rel="stylesheet">
     <!-- Google Fonts End -->
     <!-- Bootstrap Begin -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -20,7 +20,8 @@
     <script src="./scripts/index.js"></script>
     <script src="./scripts/include.js"></script>
     <script src="./scripts/mini_backend.js"></script>
-    <title>Join</title>
+    <link rel="stylesheet" href="styles/board.css">
+    <title>Boarder</title>
 </head>
 
 <body onload="init()">
@@ -31,8 +32,39 @@
 
         <main class="right-container border-spacing">
             <!-- Unique content START -->
+            <div class="container boarder-container">
+                <!-- Content here -->
+                <div class="container">
+                    <div class="border-container">
 
-            <!-- Unique content END -->
+                        <div class="border-col">
+                            <div class="border-title">
+                                <h4> To Do</h4>
+                            </div>
+                            <div class="border-content"></div>
+                        </div>
+                        <div class="border-col">
+                            <div class="border-title">
+                                <h4> In Progress</h4>
+                            </div>
+                            <div class="border-content"></div>
+                        </div>
+                        <div class="border-col">
+                            <div class="border-title">
+                                <h4> Testing</h4>
+                            </div>
+                            <div class="border-content"></div>
+                        </div>
+                        <div class="border-col">
+                            <div class="border-title">
+                                <h4> Done</h4>
+                            </div>
+                            <div class="border-content"></div>
+                        </div>
+                    </div>
+
+                </div>
+                <!-- Unique content END -->
         </main>
     </div>
 </body>
