add sidebar.js and functions

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Join</title>
     <!-- Google Fonts Begin -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,10 +17,10 @@
     <link rel="stylesheet" href="./styles/mainStyle.css">
     <link rel="stylesheet" href="./styles/sidebar.css">
     <script src="./scripts/mini_backend.js"></script>
-    <script src="./scripts/index.js"></script>
     <script src="./scripts/include.js"></script>
+    <script src="./scripts/sidebar.js"></script>
+    <script src="./scripts/index.js"></script>
     <script src="./scripts/mini_backend.js"></script>
-    <title>Join</title>
 </head>
 
 <body onload="init()">
