--- a/sidebar.html
+++ b/sidebar.html
@@ -3,11 +3,12 @@
         <div class="logo-img">
             <img src="./imgs/logo.png" alt="">
         </div>
-        <nav class="titles-section">
+        <nav id="nav-elements" class="sidebar-nav">
             <a href="#">Board</a>
             <a href="#">Backlog</a>
             <a href="#">Add Task</a>
             <a href="#">Help</a>
+            <a href="#">About</a>
         </nav>
     </div>
     <div class="personal-photo-container">
