--- a/backlog.html
+++ b/backlog.html
@@ -5,22 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Join</title>
     <!-- Google Fonts Begin -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <!-- Google Fonts End -->
     <!-- Bootstrap Begin -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap End -->
     <link rel="stylesheet" href="./styles/mainStyle.css">
-    <link rel="stylesheet" href="./styles/backlog.css">
     <link rel="stylesheet" href="./styles/sidebar.css">
+    <link rel="stylesheet" href="./styles/backlog.css">
     <script src="./scripts/mini_backend.js"></script>
-    <script src="./scripts/backlog.js"></script>
     <script src="./scripts/include.js"></script>
-    <title>Backlog</title>
+    <script src="./scripts/sidebar.js"></script>
+    <script src="./scripts/index.js"></script>
+    <script src="./scripts/backlog.js"></script>
 </head>
 
 <body onload="init()">
