--- a/sidebar.html
+++ b/sidebar.html
@@ -4,11 +4,7 @@
             <img src="./imgs/logo.png" alt="">
         </div>
         <nav id="nav-elements" class="sidebar-nav">
-            <a href="#">Board</a>
-            <a href="#">Backlog</a>
-            <a href="#">Add Task</a>
-            <a href="#">Help</a>
-            <a href="#">About</a>
+            <!-- Sidebar elements are rendered here  -->
         </nav>
     </div>
     <div class="personal-photo-container">
