finish add task style

--- a/backlog.html
+++ b/backlog.html
@@ -33,8 +33,8 @@
         <main class="right-container border-spacing">
             <!-- Unique content START -->
             <header>
-                <h1>Add Task</h1>
-                <span>Learning Management System Project</span>
+                <h1>Backlog</h1>
+                <span class="title-description">Learning Management System Project</span>
             </header>
             <div class="backlog-container">
                 <!-- <div class="backlog-headline">
