--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <!-- Unique content START -->
             <header>
                 <h1>Add Task</h1>
-                <span>Learning Management System Project</span>
+                <span class="title-description">Learning Management System Project</span>
             </header>
             <form action="" onsubmit="addTask(); return false;" class="add-task-form">
                 <div class="add-task-form--left">
@@ -78,8 +78,8 @@
                         </select>
                     </div>
                     <div class="mb-3 form-controls">
-                        <button type="reset" class="btn btn-light">CANCEL</button>
-                        <button type="submit" class="btn btn-primary">CREATE TASK</button>
+                        <button type="reset" class="btn btn-light cancel-btn">CANCEL</button>
+                        <button type="submit" class="btn btn-primary submit-btn">CREATE TASK</button>
                     </div>
                 </div>
             </form>
