remove dynamic nav rendering

--- a/sidebar.html
+++ b/sidebar.html
@@ -4,12 +4,16 @@
             <img src="./imgs/logo.png" alt="">
         </div>
         <nav id="nav-elements" class="sidebar-nav">
-            <!-- Sidebar elements are rendered here  -->
+            <a href="./board.html" id="nav-element-board">Board</a>
+            <a href="./backlog.html" id="nav-element-backlog">Backlog</a>
+            <a href="./index.html" id="nav-element-index">Add Task</a>
+            <a href="./help.html" id="nav-element-help">Help</a>
+            <a href="./about.html" id="nav-element-about">About</a>
         </nav>
     </div>
     <div class="personal-photo-container">
         <div class="personal-photo">
-            <img class="rounded-circle" src="imgs/person.jpg" alt="">
+            <img class="rounded-circle" src="./imgs/person.jpg" alt="">
         </div>
     </div>
 </aside>
