--- a/login.html
+++ b/login.html
@@ -20,7 +20,27 @@
 </head>
 
 <body>
-
+    <div class="login-section">
+        <img src="imgs/logo.png" alt="Join Logo">
+        <form action="" onsubmit="return false;" class="login-form">
+            <div class="mb-3">
+                <label for="Username" class="form-label">Username</label>
+                <input type="text" class="form-control" id="username" placeholder="Username" minlength="3" required>
+            </div>
+            <div class="mb-3">
+                <label for="Password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" placeholder="Password" minlength="3" required>
+            </div>
+            <div class="input-group mb-3">
+                <div class="checkbox-input">
+                    <input class="form-check-input mt-0" type="checkbox" value="1" aria-label="Create new account">
+                </div>
+                <span>Create new account</span>
+            </div>
+            <button type="submit" class="btn btn-primary">Send</button>
+        </form>
+    </div>
+    <a class="contact-link" href="mailto: webmaster@example.de">You need help? Contact the webmasters here!</a>
 </body>
 
 </html>
