add login, encrypt and decrypt function

--- a/login.html
+++ b/login.html
@@ -21,8 +21,8 @@
 
 <body>
     <div class="login-section">
-        <img src="imgs/logo.png" alt="Join Logo">
-        <form action="" onsubmit="return false;" class="login-form">
+        <img src="./imgs/logo.png" alt="Join Logo">
+        <form action="" onsubmit="loginOrCreateAccount(); return false;" class="login-form">
             <div class="mb-3">
                 <label for="Username" class="form-label">Username</label>
                 <input type="text" class="form-control" id="username" placeholder="Username" minlength="3" required>
