--- a/backlog.html
+++ b/backlog.html
@@ -25,6 +25,9 @@
 </head>
 
 <body onload="init()">
+    <div class="dialog-bg d-none" id="dialog-bg" onclick="closeDialog()">
+        <div class="dialog" id="dialog-content"></div>
+    </div>
     <div class="wrapper">
         <!-- Sidebar Begin -->
         <div w3-include-html="./sidebar.html"></div>
