create acc function, add main.js and refactor

--- a/backlog.html
+++ b/backlog.html
@@ -18,9 +18,9 @@
     <link rel="stylesheet" href="./styles/sidebar.css">
     <link rel="stylesheet" href="./styles/backlog.css">
     <script src="./scripts/mini_backend.js"></script>
+    <script src="./scripts/main.js"></script>
     <script src="./scripts/include.js"></script>
     <script src="./scripts/sidebar.js"></script>
-    <script src="./scripts/index.js"></script>
     <script src="./scripts/backlog.js"></script>
 </head>
 
