--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./styles/mainStyle.css">
     <link rel="stylesheet" href="./styles/sidebar.css">
     <script src="./scripts/mini_backend.js"></script>
+    <script src="./scripts/main.js"></script>
     <script src="./scripts/include.js"></script>
     <script src="./scripts/sidebar.js"></script>
     <script src="./scripts/index.js"></script>
