--- a/html/backlog.html
+++ b/html/backlog.html
@@ -14,14 +14,14 @@
     <!-- Bootstrap Begin -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap End -->
-    <link rel="stylesheet" href="./styles/mainStyle.css">
-    <link rel="stylesheet" href="./styles/sidebar.css">
-    <link rel="stylesheet" href="./styles/backlog.css">
-    <script src="./scripts/mini_backend.js"></script>
-    <script src="./scripts/main.js"></script>
-    <script src="./scripts/include.js"></script>
-    <script src="./scripts/sidebar.js"></script>
-    <script src="./scripts/backlog.js"></script>
+    <link rel="stylesheet" href="../styles/mainStyle.css">
+    <link rel="stylesheet" href="../styles/sidebar.css">
+    <link rel="stylesheet" href="../styles/backlog.css">
+    <script src="../scripts/mini_backend.js"></script>
+    <script src="../scripts/main.js"></script>
+    <script src="../scripts/include.js"></script>
+    <script src="../scripts/sidebar.js"></script>
+    <script src="../scripts/backlog.js"></script>
 </head>
 
 <body onload="init()">
