--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -1,7 +1,7 @@
 <aside class="col-2 sidebar-container border-spacing">
     <div class="sidebar-header">
         <div class="logo-img">
-            <img src="./imgs/logo.png" alt="">
+            <img src="../imgs/logo.png" alt="">
         </div>
         <nav id="nav-elements" class="sidebar-nav">
             <a href="./board.html" id="nav-element-board">Board</a>
@@ -11,9 +11,10 @@
             <a href="./about.html" id="nav-element-about">About</a>
         </nav>
     </div>
-    <div class="personal-photo-container">
-        <div class="personal-photo">
-            <img class="rounded-circle" src="./imgs/person.jpg" alt="">
+    <div class="user-account-container">
+        <div class="user-profile-picture">
+            <img class="rounded-circle" src="../imgs/person.jpg" alt="">
         </div>
+        <button type="button" class="btn btn-primary" onclick="logout()">Logout</button>
     </div>
 </aside>
