--- a/html/about.html
+++ b/html/about.html
@@ -20,7 +20,7 @@
     <script src="../scripts/mini_backend.js"></script>
     <script src="../scripts/include.js"></script>
     <script src="../scripts/sidebar.js"></script>
-    <script src="../scripts/index.js"></script>
+    <script src="../scripts/main.js"></script>
 </head>
 
 <body onload="init()">
