--- a/login.html
+++ b/login.html
@@ -14,6 +14,7 @@
     <!-- Bootstrap Begin -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap End -->
+    <link rel="stylesheet" href="./styles/mainStyle.css">
     <link rel="stylesheet" href="./styles/login.css">
     <script src="./scripts/mini_backend.js"></script>
     <script src="./scripts/main.js"></script>
@@ -40,10 +41,10 @@
                 <span>Create new account</span>
             </div>
             <button type="submit" class="btn btn-primary">Send</button>
-            <div id="login-messages" class="login-messages"></div>
+            <div id="login-messages" class="login-messages d-none"></div>
         </form>
     </div>
-    <a class="contact-link" href="mailto: webmaster@example.de">You need help? Contact the webmasters here!</a>
+    <a class="contact-link" href="mailto: webmaster@example.de"><img src="imgs/icons/help.svg" alt="Help" title="You need help? Contact the webmasters here!"></a>
 </body>
 
 </html>
