--- a/backlog.html
+++ b/backlog.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <!-- Google Fonts End -->
+    <!-- Fontawesome Begin -->
+    <script src="https://kit.fontawesome.com/f4ed45d206.js" crossorigin="anonymous"></script>
+    <!-- Fontawesome End -->
     <!-- Bootstrap Begin -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap End -->
@@ -25,7 +28,7 @@
 </head>
 
 <body onload="init()">
-    <div class="dialog-bg d-none" id="dialog-bg" onclick="closeDialog()">
+    <div class="dialog-bg d-none" id="dialog-bg">
         <div class="dialog" id="dialog-content"></div>
     </div>
     <div class="wrapper">
