--- a/html/board.html
+++ b/html/board.html
@@ -9,10 +9,12 @@
     <!-- Google Fonts Begin -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
     <!-- Google Fonts End -->
     <!-- Bootstrap Begin -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap End -->
     <link rel="stylesheet" href="../styles/mainStyle.css">
     <link rel="stylesheet" href="../styles/sidebar.css">
@@ -24,7 +26,7 @@
     <script src="../scripts/board.js"></script>
 </head>
 
-<body onload="init()">
+<body onload="init(); updateHTML()">
     <div class="wrapper">
         <!-- Sidebar Begin -->
         <div w3-include-html="./sidebar.html"></div>
@@ -41,13 +43,17 @@
                             <div class="border-title">
                                 <h4> To Do</h4>
                             </div>
-                            <div class="border-content"></div>
+                            <div class="border-content" id="open" ondrop="moveTo('open')"
+                                ondragleave="removeHighLight('open')" ondragover="allowDrop(event); hightlight('open')">
+                            </div>
                         </div>
                         <div class="border-col">
                             <div class="border-title">
                                 <h4> In Progress</h4>
                             </div>
-                            <div class="border-content"></div>
+                            <div class="border-content" id="closed" ondrop="moveTo('closed')"
+                                ondragleave="removeHighLight('closed')"
+                                ondragover="allowDrop(event); hightlight('closed')"></div>
                         </div>
                         <div class="border-col">
                             <div class="border-title">
@@ -66,7 +72,7 @@
                 </div>
                 <!-- Unique content END -->
         </main>
-        </div>
+    </div>
 </body>
 
 </html>
