complete editTask(), add some small Functions and change some CSS-Attributes for a better display

--- a/html/backlog.html
+++ b/html/backlog.html
@@ -43,11 +43,11 @@
                 <span class="title-description">Learning Management System Project</span>
             </header>
             <div class="backlog-container">
-                <!-- <div class="backlog-headline">
-                    <div>ASSIGNED TO</div>
+                <div class="backlog-headline">
+                    <div class="backlog-headline-person">ASSIGNED TO</div>
                     <div>CATEGORY</div>
-                    <div>DETAILS</div>
-                </div> -->
+                    <div class="backlog-headline-description">DETAILS</div>
+                </div>
                 <div id="backlog-content"></div>
             </div>
             <!-- Unique content END -->
