Weiter Bearbeitund von D&D

--- a/html/board.html
+++ b/html/board.html
@@ -45,33 +45,33 @@
                             <div class="border-title">
                                 <h4> To Do</h4>
                             </div>
-                            <div class="border-content" id="open" ondrop="moveTo('open')"
-                                ondragleave="removeHighLight('open')" ondragover="allowDrop(event); hightlight('open')">
+                            <div class="border-content" id="todo" ondrop="moveTo('todo')"
+                                ondragleave="removeHighLight('todo')" ondragover="allowDrop(event); hightlight('todo')">
                             </div>
                         </div>
                         <div class="border-col">
                             <div class="border-title">
                                 <h4> In Progress</h4>
                             </div>
-                            <div class="border-content" id="closed" ondrop="moveTo('closed')"
-                                ondragleave="removeHighLight('closed')"
-                                ondragover="allowDrop(event); hightlight('closed')"></div>
+                            <div class="border-content" id="inProgress" ondrop="moveTo('inProgress')"
+                                ondragleave="removeHighLight('inProgress')"
+                                ondragover="allowDrop(event); hightlight('inProgress')"></div>
                         </div>
                         <div class="border-col">
                             <div class="border-title">
                                 <h4> Testing</h4>
                             </div>
-                            <div class="border-content" id="testing" ondrop="moveTo('closed')"
-                                ondragleave="removeHighLight('closed')"
-                                ondragover="allowDrop(event); hightlight('closed')"></div>
+                            <div class="border-content" id="testing" ondrop="moveTo('testing')"
+                                ondragleave="removeHighLight('testing')"
+                                ondragover="allowDrop(event); hightlight('testing')"></div>
                         </div>
                         <div class="border-col">
                             <div class="border-title">
                                 <h4>Done</h4>
                             </div>
-                            <div class="border-content" id="done" ondrop="moveTo('closed')"
-                                ondragleave="removeHighLight('closed')"
-                                ondragover="allowDrop(event); hightlight('closed')"></div>
+                            <div class="border-content" id="done" ondrop="moveTo('done')"
+                                ondragleave="removeHighLight('done')" ondragover="allowDrop(event); hightlight('done')">
+                            </div>
                         </div>
                     </div>
 
