start user profile settings

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -12,9 +12,9 @@
         </nav>
     </div>
     <div class="user-account-container">
-        <div class="user-profile-picture">
-            <img class="rounded-circle" src="../imgs/person.jpg" alt="">
-        </div>
+        <button class="user-profile-btn">
+            <img class="rounded-circle" src="../imgs/user.svg" alt="User">
+        </button>
         <button type="button" class="btn btn-primary" onclick="logout()">Logout</button>
     </div>
 </aside>
