--- a/html/about.html
+++ b/html/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="./imgs/logo.png">
+    <link rel="icon" type="image/png" href="../imgs/logo.png">
     <title>Join</title>
     <!-- Google Fonts Begin -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
