add modal and resetUserInput()

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -13,7 +13,7 @@
     </div>
     <div class="user-account-container">
         <button class="user-profile-btn">
-            <img class="rounded-circle" src="../imgs/user.svg" alt="User">
+            <img class="rounded-circle" src="../imgs/icons/user.svg" alt="User">
         </button>
         <button type="button" class="btn btn-primary" onclick="logout()">Logout</button>
     </div>
