--- a/html/index.html
+++ b/html/index.html
@@ -81,17 +81,36 @@
                         </select>
                     </div>
                     <div class="mb-3 form-controls">
-                        <button type="reset" class="btn btn-light cancel-btn">CANCEL</button>
+                        <button type="reset" class="btn btn-light cancel-btn" onclick="resetUserInput()">CANCEL</button>
                         <button type="submit" class="btn btn-primary submit-btn">CREATE TASK</button>
                     </div>
                 </div>
             </form>
-            <!-- Unique content END -->
-        </main>
+            <!-- Button trigger modal -->
+            <button type="button" id="notice-modal-trigger" class="btn btn-primary d-none" data-bs-toggle="modal" data-bs-target="#notice-modal"></button>
+            <!-- Modal -->
+            <div class="modal fade" id="notice-modal" tabindex="-1" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <img src="../imgs/icons/notice.svg" alt="Notice">
+                            <h5 class="modal-title">Notice</h5>
+                        </div>
+                        <div class="modal-body">
+                            <span>Task created successfully!</span>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="location.reload()">Ok</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </div>
+    <!-- Unique content END -->
+    </main>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script>
         // Example starter JavaScript for disabling form submissions if there are invalid fields
         (() => {
