add simple mobile menu

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -1,4 +1,4 @@
-<aside class="col-2 sidebar-container border-spacing">
+<aside id="sidebar" class="col-2 sidebar-container border-spacing mobile-menu-visible">
     <div class="sidebar-header">
         <div class="logo-img">
             <img src="../imgs/logo.png" alt="">
@@ -18,3 +18,4 @@
         <button type="button" class="btn btn-primary" onclick="logout()">Logout</button>
     </div>
 </aside>
+<button class="mobile-menu-btn" onclick="toggleMobileMenu()"><img src="../imgs/icons/menu.svg" alt="Menu"></button>
