--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,7 @@
     <!-- Bootstrap End -->
     <link rel="stylesheet" href="../styles/mainStyle.css">
     <link rel="stylesheet" href="../styles/sidebar.css">
+    <link rel="stylesheet" href="../styles/index.css">
     <script src="../scripts/mini_backend.js"></script>
     <script src="../scripts/main.js"></script>
     <script src="../scripts/include.js"></script>
