improvements to mobile menu

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -18,4 +18,4 @@
         <button type="button" class="btn btn-primary" onclick="logout()">Logout</button>
     </div>
 </aside>
-<button class="mobile-menu-btn" onclick="toggleMobileMenu()"><img src="../imgs/icons/menu.svg" alt="Menu"></button>
+<button class="mobile-menu-btn mobile-only" onclick="toggleMobileMenu()"><img src="../imgs/icons/menu.svg" alt="Menu"></button>
