--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -1,8 +1,6 @@
 <aside id="sidebar" class="col-2 sidebar-container border-spacing mobile-menu-visible">
     <div class="sidebar-header">
-        <div class="logo-img">
-            <img src="../imgs/logo.png" alt="">
-        </div>
+        <img src="../imgs/logo.png" alt="Join Logo" class="logo-img">
         <nav id="nav-elements" class="sidebar-nav">
             <a href="./board.html" id="nav-element-board">Board</a>
             <a href="./backlog.html" id="nav-element-backlog">Backlog</a>
