--- a/html/backlog.html
+++ b/html/backlog.html
@@ -21,6 +21,7 @@
     <!-- Bootstrap End -->
     <link rel="stylesheet" href="../styles/mainStyle.css">
     <link rel="stylesheet" href="../styles/sidebar.css">
+    <link rel="stylesheet" href="../styles/index.css">
     <link rel="stylesheet" href="../styles/backlog.css">
     <script src="../scripts/mini_backend.js"></script>
     <script src="../scripts/main.js"></script>
