--- a/html/board.html
+++ b/html/board.html
@@ -26,7 +26,7 @@
     <script src="../scripts/board.js"></script>
 </head>
 
-<body onload="init(); updateHTML()">
+<body onload="init()">
     <div class="wrapper">
         <!-- Sidebar Begin -->
         <div w3-include-html="./sidebar.html"></div>
