--- a/html/backlog.html
+++ b/html/backlog.html
@@ -47,9 +47,9 @@
             </header>
             <div class="backlog-container">
                 <div class="backlog-headline">
-                    <div class="backlog-headline-person">ASSIGNED TO</div>
-                    <div>CATEGORY</div>
-                    <div class="backlog-headline-description">DETAILS</div>
+                    <div class="backlog-headline-person hide-mobile">ASSIGNED TO</div>
+                    <div class="backlog-headline-category hide-mobile">CATEGORY</div>
+                    <div class="backlog-headline-description hide-mobile">DETAILS</div>
                 </div>
                 <div id="backlog-content"></div>
             </div>
