--- a/html/about.html
+++ b/html/about.html
@@ -33,9 +33,11 @@
 
         <main class="right-container border-spacing">
             <!-- Unique content START -->
-            <div class='imprint'>
-                <h1>Impressum</h1>
-                <p class="title-description">Angaben gemäß § 5 TMG</p>
+            <div class="imprint">
+                <header>
+                    <h1>Impressum</h1>
+                    <p class="title-description">Angaben gemäß § 5 TMG</p>
+                </header>
                 <p>
                     <h4><strong>Join - Teamprojekt der Developer Akademie</strong></h4>
                 </p>
