--- a/html/board.html
+++ b/html/board.html
@@ -11,10 +11,12 @@
     <!-- Google Fonts Begin -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
     <!-- Google Fonts End -->
     <!-- Bootstrap Begin -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap End -->
     <link rel="stylesheet" href="../styles/mainStyle.css">
     <link rel="stylesheet" href="../styles/sidebar.css">
@@ -39,26 +41,33 @@
                     <div class="border-title">
                         <h4> To Do</h4>
                     </div>
-                    <div class="border-content" id="todo" ondrop="moveTo('todo')" ondragleave="removeHighLight('todo')" ondragover="allowDrop(event); hightlight('todo')">
+                    <div class="border-content" id="todo" ondrop="moveTo('todo'); removeHighlight('todo')"
+                        ondragleave="removeHighlight('todo')" ondragover="allowDrop(event); hightlight('todo')">
                     </div>
                 </div>
                 <div class="border-col">
                     <div class="border-title">
                         <h4> In Progress</h4>
                     </div>
-                    <div class="border-content" id="inProgress" ondrop="moveTo('inProgress')" ondragleave="removeHighLight('inProgress')" ondragover="allowDrop(event); hightlight('inProgress')"></div>
+                    <div class="border-content" id="inProgress"
+                        ondrop="moveTo('inProgress'); removeHighlight('inProgress')"
+                        ondragleave="removeHighlight('inProgress')"
+                        ondragover="allowDrop(event); hightlight('inProgress')"></div>
                 </div>
                 <div class="border-col">
                     <div class="border-title">
                         <h4> Testing</h4>
                     </div>
-                    <div class="border-content" id="testing" ondrop="moveTo('testing')" ondragleave="removeHighLight('testing')" ondragover="allowDrop(event); hightlight('testing')"></div>
+                    <div class="border-content" id="testing" ondrop="moveTo('testing'); removeHighlight('testing')"
+                        ondragleave="removeHighlight('testing')" ondragover="allowDrop(event); hightlight('testing')">
+                    </div>
                 </div>
                 <div class="border-col">
                     <div class="border-title">
                         <h4>Done</h4>
                     </div>
-                    <div class="border-content" id="done" ondrop="moveTo('done')" ondragleave="removeHighLight('done')" ondragover="allowDrop(event); hightlight('done')">
+                    <div class="border-content" id="done" ondrop="moveTo('done'); removeHighlight('done')"
+                        ondragleave="removeHighlight('done')" ondragover="allowDrop(event); hightlight('done')">
                     </div>
                 </div>
             </div>
