some refactoring and finishing board

--- a/html/backlog.html
+++ b/html/backlog.html
@@ -31,9 +31,10 @@
 </head>
 
 <body onload="init()">
-    <div class="dialog-bg d-none" id="dialog-bg">
-        <div class="dialog" id="dialog-content"></div>
+    <div class="dialog-bg d-none" id="dialog-bg-backlog">
+        <div class="dialog" id="dialog-content-backlog"></div>
     </div>
+    
     <div class="wrapper">
         <!-- Sidebar Begin -->
         <div w3-include-html="./sidebar.html"></div>
