--- a/html/board.html
+++ b/html/board.html
@@ -14,12 +14,16 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
     <!-- Google Fonts End -->
+    <!-- Fontawesome Begin -->
+    <script src="https://kit.fontawesome.com/f4ed45d206.js" crossorigin="anonymous"></script>
+    <!-- Fontawesome End -->
     <!-- Bootstrap Begin -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap End -->
     <link rel="stylesheet" href="../styles/mainStyle.css">
     <link rel="stylesheet" href="../styles/sidebar.css">
+    <link rel="stylesheet" href="../styles/index.css">
     <link rel="stylesheet" href="../styles/board.css">
     <script src="../scripts/mini_backend.js"></script>
     <script src="../scripts/main.js"></script>
@@ -29,6 +33,10 @@
 </head>
 
 <body onload="init()">
+    <div class="dialog-bg d-none" id="dialog-bg-board">
+        <div class="dialog" id="dialog-content-board"></div>
+    </div>
+
     <div class="wrapper">
         <!-- Sidebar Begin -->
         <div w3-include-html="./sidebar.html"></div>
